# easypeasy

./: .gitignore  LICENSE  README.md  pyproject.toml  sandbox.py
.circleci/: config.yml
.run/: Easypeasy full module test.run.xml
easypeasy/: PrincipalComponentAnalysis.py  Sequencer.py  __init__.py  data_utils.py
easypeasy/data/: france_temperature_1year.csv
easypeasy/docs/: Infography 1.psd  Infography1.psd
easypeasy/notebooks/: PrincipalComponentAnalysis.ipynb
easypeasy/reports/: compute_pca_basis.html
easypeasy/reports/media/: README.txt
easypeasy/templates/: PrincipalComponentAnalysis.html  Sequencer.html
easypeasy/templates/media/: kool - sleeping branch - rectangle.txt  logo_BW.txt  logo_RGB_47_153_89.txt
easypeasy/test/: test_env.py  test_sequencer.py
easypeasy/tests/: test_PrincipalComponentAnalysis.py  test_Sequencer.py  test_data_utils.py
easypeasy/thirdparties/: __init__.py
easypeasy/thirdparties/sequencer/: elongation_estimation.py  sequencer_.py
easypeasy/thirdparties/tests/: test_sequencer.py
