[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easypeasy"
version = "0.0.0"
authors = [
  { name="RandomCraftr", email="contact.randomcraftr@gmail.com" },
]
description = "Old fashioned and fluid API for engineering & data science general purpose"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pytest',
  'numpy',
  'scipy',
  # Following required by TheSequencer sources being included in this package
  'numpy>=1.13',
  'scikit-learn>=0.20',
  'scipy>=1.0',
  'networkx>=2.4',
  'joblib>=0.13.2',
  # End of dependencies required by including TheSequencer sources included in this package
]

[project.urls]
"Homepage" = "https://github.com/RandomCraftr/easypeasy"
"Bug Tracker" = "https://github.com/RandomCraftr/easypeasy/issues"